--- a/Iwacu/package.json
+++ b/Iwacu/package.json
@@ -31,6 +31,7 @@
     "firebase": "^9.6.1",
     "g": "^2.0.1",
     "mongoose": "^6.1.3",
+    "multer": "^1.4.4",
     "nodemon": "^2.0.15",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
