--- a/Iwacu/package.json
+++ b/Iwacu/package.json
@@ -25,13 +25,16 @@
     "@angular/router": "~13.1.1",
     "angular-cli": "^1.0.0-beta.28.3",
     "angular-material": "^1.2.4",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
     "bulma": "^0.9.3",
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "firebase": "^9.6.1",
     "g": "^2.0.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.3",
+    "mongoose-unique-validator": "^3.1.0",
     "multer": "^1.4.4",
     "nodemon": "^2.0.15",
     "rxjs": "~6.5.4",
